# HpxTrace

./: CMakeLists.txt  README.md  discoverer.cpp  ex1-threads.cpp  ex2-papi.cpp  ex3-set.cpp  ex4-simple_counter.cpp  ex5-localities.cpp  install_counter_type.txt  lip.txt
1d_stencil/: 1d_stencil_4.cpp  1d_stencil_6.cpp  1d_stencil_7.cpp  CMakeLists.txt
HpxTrace/: CMakeLists.txt  HpxTrace.cpp  HpxTrace.hpp  Mutexes.cpp  apex_action_count.cpp  backup.cpp  comp.cpp  grammar.cpp  notas.txt  parser.cpp  probes.cpp  sample_value_event_data.hpp  script.txt  script_data.cpp  script_data.hpp  task_event.cpp  variables_map.cpp
HpxTrace/Aggregations/: Aggregations.cpp  AggregationsServer.hpp
HpxTrace/Map/: MapClient.hpp
HpxTrace/MapVars/: MapVars.hpp  MapVarsModule.cpp  MapVarsServer.hpp
HpxTrace/Mutexes/: Mutexes.cpp
HpxTrace/ScalarVars/: ScalarVars.hpp  ScalarVarsModule.cpp  ScalarVarsServer.hpp
HpxTrace/parser/: actions.cpp  base_grammar.cpp  execution_grammar.cpp  parser.cpp  validation_grammars.cpp
HpxTrace/script_data_server/: script_data.hpp
apex/: CMakeLists.txt  custom_event.cpp
apex_and_counters/: CMakeLists.txt
component/: main.cpp  test.hpp  test_component.cpp  test_component.hpp
component/server/: test.hpp  test_component.hpp
component_and_apex/: Aggregation.cpp  CMakeLists.txt  ScriptData.cpp  apex_action_count.cpp  argument.cpp  comp.hpp  parse.cpp  probes.cpp
component_and_apex/Aggregations/: Aggregations.cpp
component_and_apex/Map/: Map.cpp  MapServer.hpp
component_and_apex/MapVars/: MapVars.hpp
component_and_apex/Mutexes/: MutexesServer.hpp
component_and_apex/ScalarVars/: ScalarVars.hpp  ScalarVarsServer.hpp
component_and_apex/VarsComp/: VarsComp.cpp  VarsCompClient.hpp  VarsCompServer.hpp
component_and_counter/: CMakeLists.txt  action-invocation_count.cpp  api.cpp  api_basename.cpp  api_name.cpp  cmd.cpp  example.cpp  example_client.cpp  examples.cpp  main.cpp
component_and_counter/basename_counter_server/: basename_counter.cpp  basename_counter.hpp
component_and_counter/counter_server/: example.cpp  example.hpp
component_and_counter/name_counter_server/: name_counter.cpp
full_counter/: CMakeLists.txt  example.cpp  example_client.cpp
full_counter-timer_example/: example.cpp  example_client.cpp
full_counter-timer_example/server/: example.cpp  example.hpp
full_counter/server/: example.cpp  example.hpp
hpx_study_and_exploration/: ex2-papi.cpp  lip.txt
hpx_study_and_exploration/Map/: CMakeLists.txt  Map.cpp  MapClient.hpp  MapServer.hpp  SMapServer.hpp  main.cpp
hpx_study_and_exploration/apex/: apex_fibonacci.cpp
hpx_study_and_exploration/apex_and_counters/: CMakeLists.txt  actions.cpp  probe_listener.cpp  probes.cpp
hpx_study_and_exploration/apex_unit_test/: CMakeLists.txt
hpx_study_and_exploration/api2/: CMakeLists.txt  api_name.cpp  comp.cpp  examples.cpp
hpx_study_and_exploration/api2/comp_server/: comp.hpp  monitor.cpp
hpx_study_and_exploration/api2/name_counter_server/: name_counter.hpp
hpx_study_and_exploration/component/: CMakeLists.txt  test.cpp  test.hpp
hpx_study_and_exploration/component_and_counter/: CMakeLists.txt  README.md  apex.cpp  api_name.cpp  cmd.cpp  comp.ini
hpx_study_and_exploration/component_and_counter/basename_counter_server/: basename_counter.hpp
hpx_study_and_exploration/component_and_counter/comp_server/: comp.hpp
hpx_study_and_exploration/component_example/: CMakeLists.txt  client.hpp  main.cpp  server.cpp  server.hpp
hpx_study_and_exploration/full_counter/: example.cpp
hpx_study_and_exploration/full_counter-timer_example/: CMakeLists.txt
hpx_study_and_exploration/monitor_component_counter/: CMakeLists.txt  comp.hpp  examples.cpp
hpx_study_and_exploration/monitor_component_counter/name_counter_server/: name_counter.hpp
hpx_study_and_exploration/placor/: CMakeLists.txt
monitor_component_counter/: api.cpp
monitor_component_counter/comp_server/: comp.hpp
